# BindingOfIsaacCopy

./: .gitignore  Altar.h  Audio.h  Bomb.cpp  Bomb.h  Bone.cpp  Bone.h  CMakeLists.txt  CollidableObject.cpp  Door.h  Duke.cpp  DynamicObject.h  Enemy.h  Fly.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Gusher.cpp  HUD.cpp  HUD.h  Isaac.cpp  Item.cpp  Item.h  KinematicObject.cpp  Lift.h  Menu.cpp  MovableObject.h  Object.h  Poop.h  README.md  RenderableObject.cpp  RenderableObject.h  Room.cpp  Room.h  Scene.cpp  Scene.h  Shopper.h  Singleton.h  SpriteFactory.cpp  (+7 more)
assets/sprites/: Thumbs.db
include/: AnimatedSprite.h  Coin.h  CollidableObject.h  Duke.h  FilledSprite.h  Gusher.h  Heart.h  Host.h  Isaac.h  KinematicObject.h  LevelLoader.h  Menu.h  Scheduler.h  Sprite.h  SpriteFactory.h  StaticObject.h  Tear.h  Trigger.h  UIMonster.h  UIScene.h  View.h
src/: Altar.cpp  AnimatedSprite.cpp  Audio.cpp  Coin.cpp  Door.cpp  DynamicObject.cpp  Enemy.cpp  FilledSprite.cpp  Fly.cpp  Heart.cpp  Host.cpp  LevelLoader.cpp  Lift.cpp  MovableObject.cpp  Object.cpp  Poop.cpp  Shopper.cpp  Sprite.cpp  StaticObject.cpp  Tear.cpp  TiledSprite.cpp  UIMonster.cpp  View.cpp  rock.cpp
utils/: collisionUtils.h  fileUtils.h  geometryUtils.h  graphicsUtils.h  mathUtils.h  sdlUtils.h  stringUtils.h  timeUtils.h
